#3 young-lord.github.io 补上版权信息

--- a/young-lord.github.io/Android 音乐 ID3 标签乱码初探.html
+++ b/young-lord.github.io/Android 音乐 ID3 标签乱码初探.html
@@ -60,3 +60,10 @@ slug: android-music-mojibake</p>
 <li><a href="https://android.stackexchange.com/questions/224119/how-to-gain-root-on-bluestacks-android-emulator">rooting - How to gain root on BlueStacks Android emulator - Android Enthusiasts Stack Exchange</a>（用<code>/system/xbin/bstk/su</code>在Bluestacks模拟器中获得root权限）</li>
 <li><a href="https://id3.org/id3v2.4.0-structure#:~:text=%2400%20%20%20ISO%2D8859%2D1%20%5BISO%2D8859%2D1%5D.%20Terminated%20with%20%2400.">id3v2.4.0-structure - ID3.org</a></li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
