--- a/young-lord.github.io/Arcaea 的校验研究.html
+++ b/young-lord.github.io/Arcaea 的校验研究.html
@@ -68,3 +68,10 @@ redirect_from:</p>
 <p>int(lu)*2 形如：<code>4000002</code></p>
 <p>ac_v 形如：<code>0,1,9</code></p>
 <p>则 ac_k（对 ac_v 的校验）为：<code>md5("12345abcde12345f20000010,1,94000002")</code></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
