--- a/young-lord.github.io/Arch 安装包时校验失败怎么办？.html
+++ b/young-lord.github.io/Arch 安装包时校验失败怎么办？.html
@@ -30,3 +30,10 @@ slug: arch-makepkg-integrity</p>
 <p><a href="https://blog.csdn.net/maweizz/article/details/124170548">makepkg的官方文档翻译</a></p>
 <h2>碎碎念</h2>
 <p><code>makepkg</code>选择语言所用的环境变量是<code>LANGUAGE</code>，而不是<code>LC_ALL</code>一类的</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
