--- a/young-lord.github.io/Kindle 越狱记录.html
+++ b/young-lord.github.io/Kindle 越狱记录.html
@@ -41,3 +41,10 @@ redirect_from:</p>
 <p>语言：<code>locale/zh_CN/LC_MESSAGES/blanket.mo</code>，用<code>msgunfmt</code>与<code>msgfmt</code>就可以编辑。我是把<code>shutdown.reboot.message</code>这整一条删掉，这样&lt;del&gt;赛博相框&lt;/del&gt;彻底关机后上就没有字了</p>
 <p>开机背景：<code>/usr/share/blanket/splash/bg_default.png</code>，可以替换开机时的背景</p>
 <p>锁屏图片：<code>/usr/share/blanket/screensaver/</code>，可以自己修改锁屏图片。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
