--- a/young-lord.github.io/SQL Server 另类 getshell.html
+++ b/young-lord.github.io/SQL Server 另类 getshell.html
@@ -328,3 +328,10 @@ run
 <p>只能说，充斥着巨硬的风格。</p>
 <p>一个数据库，为什么要有dll加载功能？为什么有无数种方法调用系统组件？</p>
 <p>简单胜于复杂，而MSSQL毫不遵循KISS原则——带给用户的，就是安全软件都防不住的威胁。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
