--- a/young-lord.github.io/Ventoy Arch Linux To Go 十分钟速通.html
+++ b/young-lord.github.io/Ventoy Arch Linux To Go 十分钟速通.html
@@ -315,3 +315,10 @@ sdb             8:16   1 115.5G  0 disk
 <h2>参考资料</h2>
 <p><a href="https://www.ventoy.net/cn/plugin_vtoyboot.html">Linux vDisk 文件启动插件 - 官方文档</a></p>
 <p><a href="https://www.bilibili.com/read/cv19777065/">Arch Linux To Go by Ventoy</a> - 最详尽的一个教程，感谢！</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
