--- a/young-lord.github.io/Windows 使用 USB_IP 通过网络共享 USB 设备.html
+++ b/young-lord.github.io/Windows 使用 USB_IP 通过网络共享 USB 设备.html
@@ -29,3 +29,10 @@ bcdedit /set testsigning on
 <li>查看已连接设备：<code>usbip port</code></li>
 <li>断开已连接设备：<code>usbip detach -p 0</code>（此处的<code>0</code>改为设备端口号；端口号在连接时会显示，也可以使用<code>usbip port</code>查看）</li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
