--- a/young-lord.github.io/pymssql编码问题报错UnicodeDecodeError: 'gbk' codec can't decode byte....html
+++ b/young-lord.github.io/pymssql编码问题报错UnicodeDecodeError: 'gbk' codec can't decode byte....html
@@ -46,3 +46,10 @@ slug: pymssql-unicode-error</p>
 <h2>其他解决方案</h2>
 <h3>更改charset参数</h3>
 <p>将<code>pymssql.connect</code>中的参数改为<code>gbk</code>/<code>gb2312</code>/<code>gb18030</code>/<code>CP936</code>可能有奇效&lt;del&gt;，但这太玄学了&lt;/del&gt;。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
