--- a/young-lord.github.io/qq-win-db-key 一周年啦！.html
+++ b/young-lord.github.io/qq-win-db-key 一周年啦！.html
@@ -10,3 +10,10 @@ slug: qq-win-db-key-anniversary</p>
 <p>后来出了个QQNT，加密方式也不难破解，于是原创了一份教程，用的仍然是淦Arcaea时候用的Frida，然而真正解密还是靠的<a href="https://github.com/QQBackup/QQ-History-Backup/issues/9#issuecomment-1636725067">这条comment</a>和<a href="https://github.com/QQBackup/QQ-History-Backup/issues/9#issuecomment-1740021944">这条comment</a>。在这点上GitHub可比<a href="https://www.52pojie.cn/forum.php">某些靠着大神和灌水维持的中国论坛</a>不知道高到哪里去了。（顺带一提，对PCQQ和QQNT我都已经没有在自己用了，可能只是当个练手而已）</p>
 <p>再后来，<a href="https://github.com/QQBackup/qq-win-db-key/graphs/contributors">更多人参与到了教程的编写</a>（清一色的二刺螈，笑），这个项目也不像是个个人规格的了，再加上我还是个学生，于是<a href="https://github.com/QQBackup">开了个组织</a>，拉了几个维护者（然而貌似大部分也是学生）。</p>
 <p>后来这个东西的star远远超过了我维护过的其它所有东西，我也觉得有必要写一些东西给它，值此 一周年 &amp; ~300 stars &amp; 64 commits 之际顺手写了，就这样吧。感谢所有贡献者！</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
