--- a/young-lord.github.io/一劳永逸解决 check_hostname requires server_hostname.html
+++ b/young-lord.github.io/一劳永逸解决 check_hostname requires server_hostname.html
@@ -56,3 +56,10 @@ C:\Users\%USERNAME%\AppData\Local\Programs\Python\Python310\Lib\site-packages\ur
 <p>为了写这篇 blog 去复现 bug 的时候，我发现不更改<code>ssl.py</code>也不会出现问题，所以只用修改<code>poolmanager.py</code>就可以了。</p>
 <h2>参考资料</h2>
 <p><a href="https://www.cnblogs.com/davyyy/p/14388623.html">Python 遭遇 ProxyError 问题记录</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
