--- a/young-lord.github.io/为安卓编译 SELinux 相关工具.html
+++ b/young-lord.github.io/为安卓编译 SELinux 相关工具.html
@@ -53,3 +53,10 @@ audit2allow -p policy &lt; error_dmesg.log &gt; rules.txt # audit2allow等可以
 </code></pre>
 <h2>感想</h2>
 <p>&lt;del&gt;比编译Linux内核简单多了&lt;/del&gt;</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
