--- a/young-lord.github.io/买前生产力，买后…gal？——小米平板 5 Pro 的“生产力”体验.html
+++ b/young-lord.github.io/买前生产力，买后…gal？——小米平板 5 Pro 的“生产力”体验.html
@@ -101,3 +101,10 @@ adb shell pm uninstall --user 0 com.miui.systemAdSolution
 <p>8G内存+4G zram跑linux容器的话完全不够用，很容易被杀进程</p>
 <p>系统应用不适配monet取色，强制用模块适配的话效果很烂</p>
 <p>微信、QQ等会被“区别对待”（指不允许用平板扫码登录）</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
