--- a/young-lord.github.io/从零开始写一个 Arcaea 的爬梯脚本.html
+++ b/young-lord.github.io/从零开始写一个 Arcaea 的爬梯脚本.html
@@ -8,3 +8,10 @@ redirect_from:</p>
 <h2>  - /posts/从零开始写一个Arcaea的爬梯脚本</h2>
 <h2>隐藏</h2>
 <p>本博文已被隐藏，如需访问请<a href="mailto:ly-niko@qq.com">联系我</a>。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
