--- a/young-lord.github.io/使用安卓手机破解 WiFi.html
+++ b/young-lord.github.io/使用安卓手机破解 WiFi.html
@@ -27,3 +27,10 @@ aircrack-ng &lt;filenamePrefix&gt;-&lt;xx&gt;.cap -w &lt;dictionaryPath&gt;
 <pre><code class="lang-shell"># 退出
 airmon-ng stop wlan0
 </code></pre>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
