--- a/young-lord.github.io/使用谷歌相机与相册的记录.html
+++ b/young-lord.github.io/使用谷歌相机与相册的记录.html
@@ -24,3 +24,10 @@ redirect_from:</p>
 <p>在<a href="https://www.apkmirror.com/apk/google-inc/photos/photos-5-71-0-416067338-release/google-photos-5-71-0-416067338-8-android-apk-download/">APKMirror</a>下载安装谷歌相册旧版（版本：5.71.0.416067338）</p>
 <p>安装完成后，在Xposed管理器中激活<code>Pixelify GPhotos</code>，作用域仅选择<code>谷歌相册</code>。（如果你不放心，也可以同时选择其它谷歌应用，同时取消勾选模块设置中的<code>Make sure to spoof only in Google Photos.</code>）</p>
 <p>配置Pixelify GPhotos：机型设为<code>Pixel XL</code>，高级设置内“安卓版本欺骗”不设置。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
