--- a/young-lord.github.io/关闭 Android 文件系统强制加密.html
+++ b/young-lord.github.io/关闭 Android 文件系统强制加密.html
@@ -11,3 +11,10 @@ redirect_from:</p>
 <p>简单来说就是依次在<code>/product</code>, <code>/vendor</code>, <code>/system</code>分区下寻找<code>etc/fstab.qcom</code>文件，把<code>,fileencryption=ice</code>改成<code>,encryptable=ice</code>或者直接删掉，然后清除<code>data</code>分区。</p>
 <p>修改后，还需要在Recovery内禁用AVB校验。</p>
 <p>文中还提到了使用<code>magiskboot hexpatch</code>支持动态分区的设备的方法。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
