--- a/young-lord.github.io/华为hap安装包逆向记录.html
+++ b/young-lord.github.io/华为hap安装包逆向记录.html
@@ -123,3 +123,10 @@ jarsigner -verbose -keystore a.p12 -storepass ST1RE -keypass kEy -storetype pkcs
 <li>删除手表中的安装包：<code>adb shell rm /sdcard/sign.hap</code></li>
 </ul>
 <p>如果“安装”这一步执行完成后输出<code>Success</code>，则完成安装。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
