--- a/young-lord.github.io/哔哩哔哩 冒-_-泡 技术视频的笔记.html
+++ b/young-lord.github.io/哔哩哔哩 冒-_-泡 技术视频的笔记.html
@@ -79,3 +79,10 @@ redirect_from:</p>
 <p>如果最早参加乘法的数位数值上均为 0，那无论有多少个 0，hash 值都是相同的。对此，可以将运算时的初值由 0 改为 1（也就相当于上方简介中的公式），这样前导零会被视为普通的数值参与运算。</p>
 <h4>那为什么要保留这个不好的实现？</h4>
 <p>&lt;del&gt;历史遗留&lt;/del&gt; 在随机生成数据的场景下已经有较好的表现了，但并不完善。生产环境下建议自己重新实现。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
