--- a/young-lord.github.io/我的 YANL 笔记法.html
+++ b/young-lord.github.io/我的 YANL 笔记法.html
@@ -32,3 +32,10 @@ redirect_from:</p>
 <p>正文内，可以使用<code>{}</code>包裹住需要视实际情况替换的内容，如上面展示的<code>{修辞/写作}</code>，<code>{作者心理、思想主旨}</code>就应对应替换为与实际题目相一致。</p>
 <p>对于相似内容的多种表达或是多种可以贴合上下文的词汇，可以使用<code>/</code>或<code>//</code>表示“或”。其中，<code>/</code>表示邻近的两个词语可以互相替换，<code>//</code>表示邻近的两个句子可以互相替换。特别的，形似<code>[lorem ipsum // dolor sit / amet]</code>这种用中括号包括的语句中，<code>//</code>在中括号处终止，<code>/</code>含义不变；比如，上面的例句等价于<code>lorem ipsum 或 dolor sit 或 dolor amet</code>。</p>
 <p>举例：<code>I see a splendid / magnificent view, which [astonishes me // makes me astonished]</code></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
