--- a/young-lord.github.io/某社区网络门禁协议解析.html
+++ b/young-lord.github.io/某社区网络门禁协议解析.html
@@ -34,3 +34,10 @@ redirect_from:</p>
 <p>走了一大堆弯路，但还是挺有意思的经历就是了</p>
 <p>大概就是，抓住每一处细节，多去翻<code>databases</code>这类有敏感信息的文件，别在一些随机的东西上纠结太久</p>
 <p>以及，没有轮子可以不用轮子，轮子不是用来给你制造麻烦的👎</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
