--- a/young-lord.github.io/解包 Arcaea_NS.html
+++ b/young-lord.github.io/解包 Arcaea_NS.html
@@ -33,3 +33,10 @@ redirect_from:</p>
 <p><img alt="pak_to_fin过程的演示截图、最终得到的游戏文件列表" src="https://i.loli.net/2021/06/05/qi6r5kYlztZ3X4a.png"/></p>
 <p>用我的丑陋代码提取后，你会得到<code>finally_result</code>目录，里面就是最终结果😀</p>
 <p><strong>WELCOME TO ARCAEA!</strong></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
