--- a/young-lord.github.io/解包 Arcaea_NS（二）.html
+++ b/young-lord.github.io/解包 Arcaea_NS（二）.html
@@ -28,3 +28,10 @@ redirect_from:</p>
 <p>你需要分别看每个json文件是不是乱码，如果是就把对应的json和pack文件都删掉，把所留下的不是乱码的文件分别执行下一步（可能执行多次）</p>
 <h4>JSON+PACK -&gt; 原始文件</h4>
 <p>将剩下的每组文件分别使用<code>arc_pack_extract.py</code>提取，完事。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
