--- a/young-lord.github.io/解包《雨宿公车站》与《黄昏的叙事诗》.html
+++ b/young-lord.github.io/解包《雨宿公车站》与《黄昏的叙事诗》.html
@@ -33,3 +33,10 @@ for i in os.listdir():
 <h3>学到了什么？</h3>
 <p>工欲善其事，必先利其器，不要一上来就拿个 <code>binwalk</code> 瞎撞！</p>
 <p><em>神作！</em></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
