--- a/young-lord.github.io/设计一个前后端分离的管理系统.html
+++ b/young-lord.github.io/设计一个前后端分离的管理系统.html
@@ -46,3 +46,10 @@ redirect_from:</p>
 }
 </code></pre>
 <p>登录成功后，会在浏览器设置两个cookie：一个是<code>session</code>，会话期间有效，用于短时间记录用户信息；另一个是<code>remember_token</code>，十年有效，用于长期保存用户登录状态。这里的用户信息会被Vuex保存，并被用于随后的前端用户信息查询。API的授权验证通过<code>session</code>这一cookie实现。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
