--- a/young-lord.github.io/软件层面禁用安卓音量键.html
+++ b/young-lord.github.io/软件层面禁用安卓音量键.html
@@ -23,3 +23,10 @@ redirect_from:</p>
 </ol>
 <p>注意：本方法无法完全屏蔽 KeyEvent，因此对于 Termux 这类监听了<code>onKeyDown</code>的软件，你需要额外使用我写的Xposed模块。</p>
 <p><a href="https://github.com/Young-Lord/Xposed-TermuxFix/releases/download/v1/moe.lyniko.termux_fix_v1.apk">Xposed模块下载</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
