--- a/young-lord.github.io/Deepin 安装与配置记录.html
+++ b/young-lord.github.io/Deepin 安装与配置记录.html
@@ -145,3 +145,10 @@ wget https://raw.githubusercontent.com/rainlime/fcitx-quick-phrase-emoji/master/
 <li>电池电量显示不明显</li>
 </ul>
 <p>可能要试一试 Ubuntu……下载的话用<a href="https://mirrors.tuna.tsinghua.edu.cn">清华镜像</a>，右侧就有下载链接</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
