--- a/young-lord.github.io/Jekyll 支持哪些语言高亮.html
+++ b/young-lord.github.io/Jekyll 支持哪些语言高亮.html
@@ -16,3 +16,10 @@ redirect_from:</p>
 <li><code>plaintext</code> (也叫<code>text</code>)(注意，这个实际上不会高亮，也就是不会在HTML中特殊处理，参见<a href="https://talk.jekyllrb.com/t/some-questions-with-highlighting-words-in-rouge/6543/2">这里</a>)</li>
 <li><code>console</code> (用于终端高亮，也就是<code>$</code>或<code>user@host</code>一类开头的)</li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
