--- a/young-lord.github.io/Linux 中基于 PulseAudio 使用音频均衡器.html
+++ b/young-lord.github.io/Linux 中基于 PulseAudio 使用音频均衡器.html
@@ -22,3 +22,10 @@ redirect_from:</p>
 </ol>
 <h2>备注</h2>
 <p>静默运行 PulseEffects 的命令（最后的<code>--gapplication-service</code>用于以服务模式运行，若不加此参数，可以显示图形化界面）：<code>/usr/bin/flatpak run --branch=stable --arch=x86_64 --command=pulseeffects com.github.wwmm.pulseeffects --gapplication-service</code></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
