--- a/young-lord.github.io/PPT 教程.html
+++ b/young-lord.github.io/PPT 教程.html
@@ -66,3 +66,10 @@ slug: ppt-tutorial</p>
 <p>本文章部分图片由<a href="https://pixabay.com/">Pixabay</a>提供。</p>
 <p>Lorem Ipsum文本来自<a href="https://cn.lipsum.com/">Lorem Ipsum</a>。</p>
 <p>中文假文来自<a href="https://suulnnka.github.io/BullshitGenerator">狗屁不通文章生成器</a>。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
