--- a/young-lord.github.io/Ubuntu 安装与配置记录.html
+++ b/young-lord.github.io/Ubuntu 安装与配置记录.html
@@ -209,3 +209,10 @@ sudo apt install net-tools
 <ul>
 <li>Type-C 的耳机与线控功能可以正常使用，而 Windows 下是用不了线控的</li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
