--- a/young-lord.github.io/Windows 下编译 Gitea.html
+++ b/young-lord.github.io/Windows 下编译 Gitea.html
@@ -32,3 +32,10 @@ make build
 <p>会报一大堆<code>FIND: 参数格式不正确</code>的错误，忽略即可。只要最终当前目录下生成<code>gitea.exe</code>即算成功。</p>
 <h2>运行</h2>
 <p>上面那个编译出来的是没有<code>SQLite 3</code>支持的，这边建议你跑一个<code>MariaDB</code>作数据库，具体<a href="https://blog.csdn.net/xhaimail/article/details/103306009">参见此博文</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
