--- a/young-lord.github.io/Windows 禁用资源管理器地址栏历史记录.html
+++ b/young-lord.github.io/Windows 禁用资源管理器地址栏历史记录.html
@@ -15,3 +15,10 @@ redirect_from:</p>
 <p>此时，你看到的权限条目应当只有清一色的“拒绝”。若不是这样，请把所有“允许”的均删除。</p>
 <p>选择“确定”两次，关闭注册表编辑器。</p>
 <p>完成以上操作后，资源管理器地址栏的历史记录将只会独立在一个窗口内记录，关闭窗口后消失。</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
