--- a/young-lord.github.io/Windows 远程桌面的探索.html
+++ b/young-lord.github.io/Windows 远程桌面的探索.html
@@ -36,3 +36,10 @@ redirect_from:</p>
 <h2>Windows Server 授权</h2>
 <p><a href="https://www.cnblogs.com/laosan007/p/11734283.html">Windows Server 2019远程桌面服务配置和授权激活</a></p>
 <p><a href="https://cloud.tencent.com/developer/article/1598570">Server2012*/2016/2019/2022利用powershell安装远程桌面服务、配置多用户连接原创</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
