--- a/young-lord.github.io/一个小解密.html
+++ b/young-lord.github.io/一个小解密.html
@@ -46,3 +46,10 @@ n1W4A=
 <p>或者，本博客侧栏也有直达链接</p>
 <p><code>github.com/用户名/用户名</code>这个仓库的<code>README.md</code>会被显示在用户主页</p>
 <p>然后的话，<code>gpg</code>相关内容找网络公开资源就可了</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
