--- a/young-lord.github.io/从 MT 管理器提取安卓签名密钥.html
+++ b/young-lord.github.io/从 MT 管理器提取安卓签名密钥.html
@@ -47,3 +47,10 @@ zipalign -c -v 4 signed.apk
 <li><a href="https://stackoverflow.com/questions/7151025/convert-a-pk8-file-to-key-file">https://stackoverflow.com/questions/7151025/convert-a-pk8-file-to-key-file</a></li>
 <li><a href="https://stackoverflow.com/questions/19829630/signing-apk-with-p12">https://stackoverflow.com/questions/19829630/signing-apk-with-p12</a></li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
