--- a/young-lord.github.io/使用 BlackDex 脱壳梆梆加固.html
+++ b/young-lord.github.io/使用 BlackDex 脱壳梆梆加固.html
@@ -15,3 +15,10 @@ redirect_from:</p>
 <p><code>BlackDex</code>输出的 dex 文件有<code>cookie_</code>前缀的和<code>hook_</code>前缀的，两个前缀大部分文件相同，而<code>hook_</code>前缀的会多出一个较大的 dex，<code>cookie_</code>则会多出很多较小的 dex，我的做法是只保留所有<code>cookie_</code>开头的和<code>hook_</code>开头的那个较大的<code>dex_</code>，其他的都删除。</p>
 <p><code>AndroidManifest.xml</code> 中有个 <code>addComponentFactory</code> ，那行删掉</p>
 <p>没了</p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
