--- a/young-lord.github.io/允许安卓应用访问 _proc_stat.html
+++ b/young-lord.github.io/允许安卓应用访问 _proc_stat.html
@@ -58,3 +58,10 @@ magiskpolicy --live "allow { untrusted_app untrusted_app_25 untrusted_app_27 } p
 <h2>参考资料</h2>
 <p><a href="https://topjohnwu.github.io/Magisk/guides.html">Developer Guides | Magisk</a></p>
 <p><a href="https://www.cnblogs.com/blogs-of-lxl/p/7515023.html">Android : SELinux 简析&amp;修改 - sheldon_blogs - 博客园</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
