--- a/young-lord.github.io/安卓使用 PN532 读写 NFC.html
+++ b/young-lord.github.io/安卓使用 PN532 读写 NFC.html
@@ -194,3 +194,10 @@ Using no SIMD core.
 <li><a href="https://github.com/wh201906/Proxmark3GUI">Proxmark3GUI</a></li>
 <li><a href="https://wwm.lanzouw.com/ieTj5z64d3g">MifareOneTool增强版</a></li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
