--- a/young-lord.github.io/我都拿服务器跑些啥.html
+++ b/young-lord.github.io/我都拿服务器跑些啥.html
@@ -61,3 +61,10 @@ slug: my-server</p>
 <li>nginx：用于反向代理一些网站，同时嵌入自定义js</li>
 <li>openresty：目前没怎么用，貌似可以当作nginx+lua脚本支持？</li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
