--- a/young-lord.github.io/浅谈计算机中的“栈”.html
+++ b/young-lord.github.io/浅谈计算机中的“栈”.html
@@ -55,3 +55,10 @@ int main(){
 <p><a href="https://godbolt.org/">Compiler Explorer</a></p>
 <p><a href="https://en.cppreference.com/w/cpp/language/asm">asm declaration - cppreference.com</a></p>
 <p><a href="https://cse.unl.edu/~witty/class/csce351/Project/documents/C&amp;ASM_in_Nios-II.pdf">C/C++ keyword: asm</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
