--- a/young-lord.github.io/科学苗子游记.html
+++ b/young-lord.github.io/科学苗子游记.html
@@ -87,4 +87,10 @@ slug: axis-2023</p>
 &lt;!-- 一些想到的相关玩意，或许改改可以当标题
 因果交流下的光辉
 褪去光环，我们依然不落凡尘
-曾经沧海难为水，除却巫山不是云。--&gt;
+曾经沧海难为水，除却巫山不是云。--&gt;<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
