--- a/young-lord.github.io/逆向 COM dll.html
+++ b/young-lord.github.io/逆向 COM dll.html
@@ -174,3 +174,10 @@ assert PwdInfo.UnLockPwd("1234567", "123456") == PwdInfo.UnLockPwd(1234567, "123
 <h2>参考资料</h2>
 <p><a href="https://reverseengineering.stackexchange.com/questions/2530/what-are-general-guide-lines-for-reversing-com-objects">windows - What are general guide lines for reversing COM objects - Reverse Engineering Stack Exchange</a></p>
 <p><a href="https://web.archive.org/web/20200214043713/http://www.woodmann.com/collaborative/tools/index.php/Category:COM_Tools">Category:COM Tools - Collaborative RCE Tool Library</a></p>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
