--- a/young-lord.github.io/通过 Xposed 与 frp 远程读取短信验证码.html
+++ b/young-lord.github.io/通过 Xposed 与 frp 远程读取短信验证码.html
@@ -19,3 +19,10 @@ redirect_from:</p>
 <li>以特定方式发送一条短信，便可激活此脚本。</li>
 <li>使用<code>cat /data/user/0/com.github.tianma8023.xposed.smscode/databases/sms-code.db</code>查看验证码。</li>
 </ul>
+<div class="license">
+  <p>本文遵守 <a itemprop="license" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA-4.0</a> 许可协议。<a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/README.md#%E5%A3%B0%E6%98%8E">（不允许转载至简书或 CSDN）</a>
+    <a rel="license" aria-label="详细了解协议内容" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<!--        <img alt="CC BY-NC-SA-4.0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />-->
+    </a>
+  </p>
+</div>
